--- a/main/_modules/merlin/systems/dag/ops/fil.html
+++ b/main/_modules/merlin/systems/dag/ops/fil.html
@@ -95,6 +95,7 @@
 <span class="kn">from</span> <span class="nn">merlin.core.dispatch</span> <span class="kn">import</span> <span class="n">HAS_GPU</span>
 <span class="kn">from</span> <span class="nn">merlin.core.protocols</span> <span class="kn">import</span> <span class="n">Transformable</span>
 <span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">ColumnSelector</span>  <span class="c1"># noqa</span>
+<span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">BaseOperator</span>
 <span class="kn">from</span> <span class="nn">merlin.schema</span> <span class="kn">import</span> <span class="n">ColumnSchema</span><span class="p">,</span> <span class="n">Schema</span>  <span class="c1"># noqa</span>
 <span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.compat</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">cuml_ensemble</span><span class="p">,</span>
@@ -105,11 +106,10 @@
     <span class="n">treelite_sklearn</span><span class="p">,</span>
     <span class="n">xgboost</span><span class="p">,</span>
 <span class="p">)</span>
-<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">InferenceOperator</span>
 <span class="kn">from</span> <span class="nn">merlin.table</span> <span class="kn">import</span> <span class="n">TensorTable</span>
 
 
-<div class="viewcode-block" id="PredictForest"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.fil.PredictForest.html#merlin.systems.dag.ops.fil.PredictForest">[docs]</a><span class="k">class</span> <span class="nc">PredictForest</span><span class="p">(</span><span class="n">InferenceOperator</span><span class="p">):</span>
+<div class="viewcode-block" id="PredictForest"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.fil.PredictForest.html#merlin.systems.dag.ops.fil.PredictForest">[docs]</a><span class="k">class</span> <span class="nc">PredictForest</span><span class="p">(</span><span class="n">BaseOperator</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Operator for running inference on Forest models.</span>
 
 <span class="sd">    This works for gradient-boosted decision trees (GBDTs) and Random forests (RF).</span>
@@ -188,7 +188,7 @@
         <span class="k">return</span> <span class="nb">type</span><span class="p">(</span><span class="n">transformable</span><span class="p">)(</span><span class="n">outputs</span><span class="p">)</span></div></div>
 
 
-<span class="k">class</span> <span class="nc">FIL</span><span class="p">(</span><span class="n">InferenceOperator</span><span class="p">):</span>
+<span class="k">class</span> <span class="nc">FIL</span><span class="p">(</span><span class="n">BaseOperator</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Operator for Forest Inference Library (FIL) models.</span>
 
 <span class="sd">    Packages up XGBoost models to run on Triton inference server using the fil backend.</span>
