--- a/main/_modules/merlin/systems/dag/ops/implicit.html
+++ b/main/_modules/merlin/systems/dag/ops/implicit.html
@@ -92,9 +92,8 @@
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
 <span class="kn">from</span> <span class="nn">merlin.core.protocols</span> <span class="kn">import</span> <span class="n">Transformable</span>
-<span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">ColumnSelector</span>
+<span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">BaseOperator</span><span class="p">,</span> <span class="n">ColumnSelector</span>
 <span class="kn">from</span> <span class="nn">merlin.schema</span> <span class="kn">import</span> <span class="n">ColumnSchema</span><span class="p">,</span> <span class="n">Schema</span>
-<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">InferenceOperator</span>
 
 <span class="k">try</span><span class="p">:</span>
     <span class="kn">import</span> <span class="nn">implicit</span>
@@ -108,7 +107,7 @@
     <span class="n">implicit</span> <span class="o">=</span> <span class="kc">None</span>
 
 
-<div class="viewcode-block" id="PredictImplicit"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.implicit.PredictImplicit.html#merlin.systems.dag.ops.implicit.PredictImplicit">[docs]</a><span class="k">class</span> <span class="nc">PredictImplicit</span><span class="p">(</span><span class="n">InferenceOperator</span><span class="p">):</span>
+<div class="viewcode-block" id="PredictImplicit"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.implicit.PredictImplicit.html#merlin.systems.dag.ops.implicit.PredictImplicit">[docs]</a><span class="k">class</span> <span class="nc">PredictImplicit</span><span class="p">(</span><span class="n">BaseOperator</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Operator for running inference on Implicit models..&quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="PredictImplicit.__init__"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.implicit.PredictImplicit.html#merlin.systems.dag.ops.implicit.PredictImplicit.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">model</span><span class="p">,</span> <span class="n">num_to_recommend</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">10</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
