--- a/main/_modules/merlin/systems/dag/ops/unroll_features.html
+++ b/main/_modules/merlin/systems/dag/ops/unroll_features.html
@@ -90,13 +90,12 @@
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
 <span class="kn">from</span> <span class="nn">merlin.core.protocols</span> <span class="kn">import</span> <span class="n">Transformable</span>
-<span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">DataFormats</span><span class="p">,</span> <span class="n">Node</span>
+<span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">BaseOperator</span><span class="p">,</span> <span class="n">DataFormats</span><span class="p">,</span> <span class="n">Node</span>
 <span class="kn">from</span> <span class="nn">merlin.dag.selector</span> <span class="kn">import</span> <span class="n">ColumnSelector</span>
 <span class="kn">from</span> <span class="nn">merlin.schema</span> <span class="kn">import</span> <span class="n">Schema</span>
-<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">InferenceOperator</span>
 
 
-<div class="viewcode-block" id="UnrollFeatures"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures">[docs]</a><span class="k">class</span> <span class="nc">UnrollFeatures</span><span class="p">(</span><span class="n">InferenceOperator</span><span class="p">):</span>
+<div class="viewcode-block" id="UnrollFeatures"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures">[docs]</a><span class="k">class</span> <span class="nc">UnrollFeatures</span><span class="p">(</span><span class="n">BaseOperator</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    This operator takes a target column and joins the &quot;unroll&quot; columns to the target. This helps</span>
 <span class="sd">    when broadcasting a series of user features to a set of items.</span>
